# usv_simulator

./: .clang-format  README.md
usv_simulator/local_sensing/: CMakeLists.txt  package.xml
usv_simulator/local_sensing/src/: pcl_render_node.cpp
usv_simulator/mpc_planner/: CMakeLists.txt  package.xml
usv_simulator/mpc_planner/config/: rviz.rviz
usv_simulator/mpc_planner/launch/: run_in_sim.launch  simulate_test.launch  simulator.xml
usv_simulator/so3_control/: CMakeLists.txt  package.xml
usv_simulator/so3_control/src/: control_example.cpp  so3_control_nodelet.cpp
usv_simulator/usv_2d_simulator/: CMakeLists copy.txt  CMakeLists.txt  package.xml
usv_simulator/usv_2d_simulator/config/: rviz.rviz
usv_simulator/usv_2d_simulator/include/usv_simulator/: USV.h
usv_simulator/usv_2d_simulator/launch/: simulator_example.launch  simulator_usv.launch
usv_simulator/usv_2d_simulator/src/: quadrotor_simulator_so3.cpp  usv_simulator_node.cpp
usv_simulator/usv_2d_simulator/src/dynamics/: USV.cpp
utils/odom_visualization/: CMakeLists.txt
utils/odom_visualization/src/: odom_visualization.cpp
utils/util_msgs/: CMakeLists.txt  package.xml
utils/util_msgs/include/util_msgs/: comm_types.h  decode_msgs.h  encode_msgs.h
utils/util_msgs/msg/: SO2Command.msg  SO3Command.msg  Serial.msg  TRPYCommand.msg
utils/util_msgs/src/: decode_msgs.cpp  encode_msgs.cpp
utils/util_msgs/src/util_msgs/msg/: _AuxCommand.py  _Corrections.py  _Gains.py  _OutputData.py  _PPROutputData.py  _PositionCommand.py  _SO3Command.py  _Serial.py  _StatusData.py  _TRPYCommand.py
